blog & blog details page complete

--- a/agencyzilla-html/assets/scss/_footer.scss
+++ b/agencyzilla-html/assets/scss/_footer.scss
@@ -212,6 +212,17 @@
                         }
                     }
                 }
+
+                &.active {
+
+                    a {
+                        color: $primary;
+
+                        &:before {
+                            @include transform(scaleX(1));
+                        }
+                    }
+                }
             }
         }
     }
