--- a/agencyzilla-html/assets/scss/style.scss
+++ b/agencyzilla-html/assets/scss/style.scss
@@ -34,5 +34,20 @@ Version: 1.0.0
 // BANNER
 @import 'banner';
 
+// HOME
+@import 'home-page';
+
+// BLOG
+@import 'blog';
+
+// BLOG PAGE
+@import 'blog-page';
+
+// BLOG DETAILS PAGE
+@import 'blog-details-page';
+
+// SIDEBAR
+@import 'sidebar';
+
 // FOOTER 
 @import 'footer';
