--- a/agencyzilla-html/assets/scss/_animation.scss
+++ b/agencyzilla-html/assets/scss/_animation.scss
@@ -213,3 +213,25 @@
   0%, 100% { -webkit-transform: scale(1) }
   50% { -webkit-transform: scale(0.9) }
 }
+
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes cube {
+  from {
+    transform: scale(0) rotate(0deg) translate(-50%, -50%);
+    opacity: 1;
+  }
+  to {
+    transform: scale(20) rotate(960deg) translate(-50%, -50%);
+    opacity: 0;
+  }
+}
