--- a/agencyzilla-html/assets/scss/_banner.scss
+++ b/agencyzilla-html/assets/scss/_banner.scss
@@ -1,6 +1,7 @@
 /*** banner */
 .banner {
     overflow: hidden;
+    position: relative;
     padding: 195px 0 100px;
 
     @media (max-width: 1199px) {
@@ -21,6 +22,66 @@
 
     @media (max-width: 480px) {
         padding-top: 110px;
+    }
+
+    .background {
+        top: 0;
+        left: 0;
+        padding: 0;
+        margin: 0px;
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+        position: absolute;
+        background: linear-gradient(132deg, #FC415A, #f1f1f1, #212335);
+        background-size: 400% 400%;
+        animation: Gradient 15s ease infinite;
+
+        .cube {
+            top: 80vh;
+            left: 45vw;
+            width: 10px;
+            height: 10px;
+            position: absolute;
+            border: solid 1px #D7D4E4;
+            transform-origin: top left;
+            transform: scale(0) rotate(0deg) translate(-50%, -50%);
+            animation: cube 12s ease-in forwards infinite;
+
+            &:nth-child(2n) {
+                border-color: #FFF ;
+            }
+
+            &:nth-child(2) {
+                top: 40vh;
+                left: 25vw;
+                animation-delay: 2s;
+            }
+
+            &:nth-child(3) {
+                top: 50vh;
+                left: 75vw;
+                animation-delay: 4s;
+            }
+
+            &:nth-child(4) {
+                top: 10vh;
+                left: 90vw;
+                animation-delay: 6s;
+            }
+
+            &:nth-child(5) {
+                top: 85vh;
+                left: 10vw;
+                animation-delay: 8s;
+            }
+
+            &:nth-child(6) {
+                top: 10vh;
+                left: 50vw;
+                animation-delay: 10s;
+            }
+        }
     }
 
     .scrollDown {
