--- a/agencyzilla-html/style.css
+++ b/agencyzilla-html/style.css
@@ -882,6 +882,52 @@ section {
     -webkit-transform: scale(0.9);
   }
 }
+@-webkit-keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@-webkit-keyframes cube {
+  from {
+    -webkit-transform: scale(0) rotate(0deg) translate(-50%, -50%);
+            transform: scale(0) rotate(0deg) translate(-50%, -50%);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: scale(20) rotate(960deg) translate(-50%, -50%);
+            transform: scale(20) rotate(960deg) translate(-50%, -50%);
+    opacity: 0;
+  }
+}
+@keyframes cube {
+  from {
+    -webkit-transform: scale(0) rotate(0deg) translate(-50%, -50%);
+            transform: scale(0) rotate(0deg) translate(-50%, -50%);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: scale(20) rotate(960deg) translate(-50%, -50%);
+            transform: scale(20) rotate(960deg) translate(-50%, -50%);
+    opacity: 0;
+  }
+}
 /***********************************
 PAGE LOAD ANIMATION
 ***********************************/
@@ -1627,6 +1673,7 @@ select:focus, textarea:hover, textarea:focus {
 /*** banner */
 .banner {
   overflow: hidden;
+  position: relative;
   padding: 195px 0 100px;
 }
 @media (max-width: 1199px) {
@@ -1653,6 +1700,67 @@ select:focus, textarea:hover, textarea:focus {
   .banner {
     padding-top: 110px;
   }
+}
+.banner .background {
+  top: 0;
+  left: 0;
+  padding: 0;
+  margin: 0px;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  position: absolute;
+  background: linear-gradient(132deg, #FC415A, #f1f1f1, #212335);
+  background-size: 400% 400%;
+  -webkit-animation: Gradient 15s ease infinite;
+          animation: Gradient 15s ease infinite;
+}
+.banner .background .cube {
+  top: 80vh;
+  left: 45vw;
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  border: solid 1px #D7D4E4;
+  -webkit-transform-origin: top left;
+          transform-origin: top left;
+  -webkit-transform: scale(0) rotate(0deg) translate(-50%, -50%);
+          transform: scale(0) rotate(0deg) translate(-50%, -50%);
+  -webkit-animation: cube 12s ease-in forwards infinite;
+          animation: cube 12s ease-in forwards infinite;
+}
+.banner .background .cube:nth-child(2n) {
+  border-color: #FFF;
+}
+.banner .background .cube:nth-child(2) {
+  top: 40vh;
+  left: 25vw;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+}
+.banner .background .cube:nth-child(3) {
+  top: 50vh;
+  left: 75vw;
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+}
+.banner .background .cube:nth-child(4) {
+  top: 10vh;
+  left: 90vw;
+  -webkit-animation-delay: 6s;
+          animation-delay: 6s;
+}
+.banner .background .cube:nth-child(5) {
+  top: 85vh;
+  left: 10vw;
+  -webkit-animation-delay: 8s;
+          animation-delay: 8s;
+}
+.banner .background .cube:nth-child(6) {
+  top: 10vh;
+  left: 50vw;
+  -webkit-animation-delay: 10s;
+          animation-delay: 10s;
 }
 .banner .scrollDown {
   border: 0;
