--- a/agencyzilla-html/assets/scss/_typography.scss
+++ b/agencyzilla-html/assets/scss/_typography.scss
@@ -215,6 +215,22 @@ section {
 
 .content-area {
     overflow: hidden;
+
+    &.gradient-background {
+        position: relative;
+        
+        &:after {
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            content: "";
+            opacity: .1;
+            z-index: -1;
+            position: absolute;
+            background: linear-gradient( 90deg,rgb(89,86,233) 0%,rgb(0,208,156) 100%);
+        }
+    }
 }
 
 .entry-title {
