dark_white color change

--- a/agencyzilla-html/assets/scss/_variables.scss
+++ b/agencyzilla-html/assets/scss/_variables.scss
@@ -1,11 +1,12 @@
 /***********************************
-    Template All Variables Defined - Value Change with Your's Need
+Template All Variables Defined - Value Change with Your's Need
 ***********************************/
 $white:#FFF;
 $black:#000; 
 $primary:#16cd00; 
 $secondary:#211E3B; 
-$dark_white: #f1f1f1;
+$dark_white: #E7FAF7;
+$dark_white2: #f1f1f1;
 
 // Theme Color - Defualt Colors
 $textcolor: #3c3c3c;
