--- a/agencyzilla-html/assets/scss/_banner.scss
+++ b/agencyzilla-html/assets/scss/_banner.scss
@@ -30,7 +30,7 @@
         padding: 0;
         margin: 0px;
         width: 100%;
-        height: 100vh;
+        height: 100%;
         overflow: hidden;
         position: absolute;
         background: linear-gradient(132deg, #FC415A, #f1f1f1, #212335);
