--- a/agencyzilla-html/assets/scss/_home-page.scss
+++ b/agencyzilla-html/assets/scss/_home-page.scss
@@ -1,4 +1,152 @@
 /*** Home Style */
+
+.brands-logo {
+
+    &__content {
+        margin-bottom: 30px;
+
+        @media (max-width: 767px) {
+            margin-bottom: 20px; 
+        }
+    }
+
+    &__item { 
+        max-width: 330px;
+        overflow: hidden;
+        position: relative;
+        @include border-radius(36px);
+
+        @media (max-width: 1199px) {
+            max-width: 300px;
+        }
+
+        @media (max-width: 991px) {
+            max-width: 280px;
+        }
+
+        @media (max-width: 767px) {
+            max-width: 250px;
+        } 
+
+        &-slider-wrapper {
+            gap: 30px;
+        }
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &:after { 
+            top: 0;
+            left: 0;
+            content: "";
+            width: 100%;
+            height: 100%;
+            opacity: 0.2;
+            background: $black;
+            position: absolute;
+            @include transition(all .3s ease);
+        }
+
+        &-media {
+            width: 330px;
+            height: 330px;
+
+            @media (max-width: 1199px) {
+                width: 300px;
+                height: 300px;
+            }
+
+            @media (max-width: 991px) {
+                width: 280px;
+                height: 280px;
+            }
+
+            @media (max-width: 767px) {
+                width: 250px;
+                height: 250px;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                @include transition(all .3s ease);
+            }
+        }
+
+        &-client-logo { 
+            z-index: 1;
+            padding: 40px; 
+            position: absolute;
+
+            @media (max-width: 575px) {
+                padding: 30px;
+            }
+
+            img {
+                @include transition(all .3s ease);
+            }
+        }
+
+        &:any-link {
+
+            &:hover {
+ 
+                &:after {
+                    opacity: 0.6;
+                }
+
+                .brands-logo__item {
+
+                    &-media {
+
+                        img {
+                            @include transform(scale(1.05));
+                        }
+                    }
+
+                    &-client-logo {
+
+                        img {
+                            @include transform(scale(1.2));
+                        }
+                    }
+                }
+            }
+
+            &.text {
+
+                &:hover {
+ 
+                    &:after {
+                        opacity: 1;
+                    } 
+                }
+            }
+        }
+    }
+}
+
+.slick-list {
+    margin-left: -15px;
+    margin-right: -15px;
+
+    .slick-track {
+        height: 100%;
+        display: table !important;
+
+        .slick-slide {
+            height: initial;
+            padding-left: 15px;
+            padding-right: 15px;
+            vertical-align: middle;
+            float: none !important;
+            display: table-cell !important;
+        }
+    }
+}
+
 .latest-news {
 
     &__content {
