--- a/agencyzilla-html/style.css
+++ b/agencyzilla-html/style.css
@@ -1722,7 +1722,7 @@ select:focus, textarea:hover, textarea:focus {
   padding: 0;
   margin: 0px;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
   position: absolute;
   background: linear-gradient(132deg, #FC415A, #f1f1f1, #212335);
@@ -1851,6 +1851,167 @@ select:focus, textarea:hover, textarea:focus {
 }
 
 /*** Home Style */
+.brands-logo__content {
+  margin-bottom: 30px;
+}
+@media (max-width: 767px) {
+  .brands-logo__content {
+    margin-bottom: 20px;
+  }
+}
+.brands-logo__item {
+  max-width: 330px;
+  overflow: hidden;
+  position: relative;
+  border-radius: 36px;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+@media (max-width: 1199px) {
+  .brands-logo__item {
+    max-width: 300px;
+  }
+}
+@media (max-width: 991px) {
+  .brands-logo__item {
+    max-width: 280px;
+  }
+}
+@media (max-width: 767px) {
+  .brands-logo__item {
+    max-width: 250px;
+  }
+}
+.brands-logo__item-slider-wrapper {
+  gap: 30px;
+}
+.brands-logo__item:after {
+  top: 0;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  opacity: 0.2;
+  background: #000;
+  position: absolute;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.brands-logo__item-media {
+  width: 330px;
+  height: 330px;
+}
+@media (max-width: 1199px) {
+  .brands-logo__item-media {
+    width: 300px;
+    height: 300px;
+  }
+}
+@media (max-width: 991px) {
+  .brands-logo__item-media {
+    width: 280px;
+    height: 280px;
+  }
+}
+@media (max-width: 767px) {
+  .brands-logo__item-media {
+    width: 250px;
+    height: 250px;
+  }
+}
+.brands-logo__item-media img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.brands-logo__item-client-logo {
+  z-index: 1;
+  padding: 40px;
+  position: absolute;
+}
+@media (max-width: 575px) {
+  .brands-logo__item-client-logo {
+    padding: 30px;
+  }
+}
+.brands-logo__item-client-logo img {
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.brands-logo__item:-webkit-any-link:hover:after {
+  opacity: 0.6;
+}
+.brands-logo__item:-moz-any-link:hover:after {
+  opacity: 0.6;
+}
+.brands-logo__item:any-link:hover:after {
+  opacity: 0.6;
+}
+.brands-logo__item:-webkit-any-link:hover .brands-logo__item-media img {
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+}
+.brands-logo__item:-moz-any-link:hover .brands-logo__item-media img {
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+}
+.brands-logo__item:any-link:hover .brands-logo__item-media img {
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+}
+.brands-logo__item:-webkit-any-link:hover .brands-logo__item-client-logo img {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+.brands-logo__item:-moz-any-link:hover .brands-logo__item-client-logo img {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+.brands-logo__item:any-link:hover .brands-logo__item-client-logo img {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+.brands-logo__item:-webkit-any-link.text:hover:after {
+  opacity: 1;
+}
+.brands-logo__item:-moz-any-link.text:hover:after {
+  opacity: 1;
+}
+.brands-logo__item:any-link.text:hover:after {
+  opacity: 1;
+}
+
+.slick-list {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+.slick-list .slick-track {
+  height: 100%;
+  display: table !important;
+}
+.slick-list .slick-track .slick-slide {
+  height: initial;
+  padding-left: 15px;
+  padding-right: 15px;
+  vertical-align: middle;
+  float: none !important;
+  display: table-cell !important;
+}
+
 .latest-news__content {
   margin-bottom: 30px;
 }
