--- a/agencyzilla-html/assets/scss/_home-page.scss
+++ b/agencyzilla-html/assets/scss/_home-page.scss
@@ -147,6 +147,162 @@
     }
 }
 
+.clients { 
+
+    &__content {
+        margin-bottom: 30px;
+
+        @media (max-width: 767px) {
+            margin-bottom: 20px; 
+        }
+    }
+
+    .clients-slider {
+        overflow: hidden; 
+        padding-left: 15px;
+        margin-bottom: 0 !important;
+        margin-right: calc(-100vw / 2 + 100% / 2) !important;
+    }
+    
+    .slider-controls { 
+        margin-top: 30px;
+        position: relative;
+
+        .slider-progress {
+            height: 10px;
+            border-radius: 0; 
+            position: relative; 
+            background: $primary;
+            max-width: calc(100% - 128px);
+
+            @media (max-width: 480px) {
+                max-width: calc(100% - 100px);
+            }
+
+            @media (max-width: 991px) {
+                height: 8px;
+            }
+
+            .progress {
+                top: 0;
+                left: 0;
+                width: 0;
+                height: 100%;
+                border-radius: 0;
+                position: absolute;
+                background: $dark_white;
+            }
+        }
+     
+        .slick-dots {  
+            right: -5px;
+            margin: revert;
+            text-align: right;
+            position: absolute;
+
+            li {
+                width: 28px;
+                height: 10px;
+                background: $white;
+                border: 3px solid $primary; 
+                @include transition(all .3s ease);
+
+                @media (max-width: 991px) {
+                    height: 8px;
+                    border-width: 2px;
+                }
+
+                @media (max-width: 480px) {
+                    width: 20px;
+                }
+
+                &.slick-active {
+                    background: $primary;
+                }
+            }
+        } 
+    }
+}
+
+.clients-item { 
+    padding: 40px;
+    background: $dark_white; 
+    box-shadow: 0px 24px 24px rgba(0, 0, 0, 0.06);
+
+    @media (max-width: 991px) {
+        padding: 35px;
+    }
+
+    @media (max-width: 767px) {
+        padding: 30px;
+    }
+
+    @media (max-width: 480px) {
+        padding: 25px;
+    }
+
+
+    .icon {
+        color: $primary;
+        font-size: 40px; 
+        margin-right: 20px;
+
+        @media (max-width: 480px) {
+            font-size: 35px;
+            margin-right: 15px;
+        }
+    }
+
+    .quote {
+        overflow: hidden;
+
+        .quote-footer {
+            margin-top: 15px;
+
+            .media {
+                width: 50px;
+                height: 50px;
+                min-width: 50px;
+                overflow: hidden;
+                margin-right: 10px;
+                @include border-radius(500px);
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .text {
+                overflow: hidden;
+
+                .name { 
+                    color: $primary;
+
+                    @media (max-width: 480px) {
+                        font-size: 14px;
+                        line-height: 24px;
+                    }
+                }
+
+                .position {
+                    display: block;
+                    font-size: 14px;
+                    font-weight: 400;
+                    line-height: 18px;
+                    color: $textcolor;
+
+                    @media (max-width: 480px) {
+                        font-size: 13px;
+                        line-height: 17px;
+                    }
+                }
+            }
+        } 
+    }
+}
+
 .latest-news {
 
     &__content {
