--- a/agencyzilla-html/style.css
+++ b/agencyzilla-html/style.css
@@ -2161,6 +2161,86 @@ select:focus, textarea:hover, textarea:focus {
   }
 }
 
+.our-services .mb-30 {
+  margin-bottom: -30px;
+}
+.our-services__content {
+  margin-bottom: 30px;
+}
+@media (max-width: 767px) {
+  .our-services__content {
+    margin-bottom: 20px;
+  }
+}
+
+.people-likes .mb-30 {
+  margin-bottom: -30px;
+}
+@media (max-width: 480px) {
+  .people-likes .mb-30 > [class*=col] {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+.people-likes__content {
+  margin-bottom: 30px;
+}
+@media (max-width: 767px) {
+  .people-likes__content {
+    margin-bottom: 20px;
+  }
+}
+.people-likes__item {
+  min-height: 280px;
+  overflow: hidden;
+  margin-bottom: 30px;
+  border-radius: 36px;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  background-color: #E7FAF7;
+}
+@media (max-width: 991px) {
+  .people-likes__item {
+    min-height: 250px;
+  }
+}
+@media (max-width: 767px) {
+  .people-likes__item {
+    border-radius: 24px;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+  }
+}
+@media (max-width: 575px) {
+  .people-likes__item {
+    border-radius: 14px;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+  }
+}
+.people-likes__item:hover .icon {
+  -webkit-animation: shake 0.5s linear 1;
+          animation: shake 0.5s linear 1;
+}
+.people-likes__item .icon {
+  color: #16cd00;
+  font-size: 70px;
+  margin-bottom: 20px;
+}
+.people-likes__item .number {
+  font-size: 30px;
+  line-height: 30px;
+  margin-bottom: 5px;
+}
+
 /*** Blog */
 .blog-post {
   display: block;
@@ -2650,6 +2730,92 @@ select:focus, textarea:hover, textarea:focus {
 }
 .sidebar .widget .categories li.active a, .sidebar .widget .categories li:hover a, .sidebar .widget .categories li:focus a {
   background-color: #000;
+}
+
+/*** Our services */
+.our-services__item {
+  display: block;
+  overflow: hidden;
+  margin-bottom: 30px;
+  height: calc(100% - 30px);
+  border-radius: 36px;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  background-color: #E7FAF7;
+}
+@media (max-width: 767px) {
+  .our-services__item {
+    border-radius: 24px;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+  }
+}
+@media (max-width: 575px) {
+  .our-services__item {
+    border-radius: 14px;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+  }
+}
+.our-services__item:hover .media img, .our-services__item:focus .media img {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+.our-services__item:hover .text .title, .our-services__item:hover .text .description, .our-services__item:focus .text .title, .our-services__item:focus .text .description {
+  color: #16cd00;
+}
+.our-services__item .media {
+  overflow: hidden;
+  border-radius: 36px;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+}
+@media (max-width: 767px) {
+  .our-services__item .media {
+    border-radius: 24px;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+  }
+}
+@media (max-width: 575px) {
+  .our-services__item .media {
+    border-radius: 14px;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+  }
+}
+.our-services__item .media img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.our-services__item .text {
+  padding: 20px 10px;
+}
+.our-services__item .text .title {
+  margin-bottom: 5px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.our-services__item .text .description {
+  color: #3c3c3c;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .footer {
