services page working

--- a/agencyzilla-html/assets/scss/style.scss
+++ b/agencyzilla-html/assets/scss/style.scss
@@ -49,8 +49,11 @@ Version: 1.0.0
 // SIDEBAR
 @import 'sidebar';
 
-// BLOG
+// OUR SERVICES
 @import 'our-services';
+
+// PRICING TABLE
+@import 'pricing-table';
 
 // FOOTER 
 @import 'footer';
